apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: mealie
spec:
  selector:
    app: mealie 
  ports:
    - port: 80
      targetPort: 9000
  type: ClusterIP
