apps/base/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie 
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.kptasznik.net
      http:
        paths:
          - backend:
              service:
                name: mealie-service
                port:
                  number: 80
            path: /
            pathType: Prefix
